testsuite/tests/partial-sigs/should_fail/WildcardInGADT2.hs
{-# LANGUAGE PartialTypeSignatures, GADTs #-}
module WildcardInGADT2 where

data Foo a where
  Foo :: (Eq a, _) => Maybe a -> Foo a
