testsuite/tests/partial-sigs/should_fail/WildcardInGADT2.stderr

WildcardInGADT2.hs:5:17: error: [GHC-65507]
    Wildcard ‘_’ not allowed
      in the definition of data constructor ‘Foo’
